deploy-logs.txt
  File "/app/app.py", line 1075

    error_msg = f"REAL ERROR: {str(sync_error)} (Type: {type(sync_error).__name__})"

    ^^^^^^^^^

IndentationError: expected an indented block after 'except' statement on line 1073

Mounting volume on: /var/lib/containers/railwayapp/bind-mounts/0afe963f-018a-41c9-8f18-1bcb28388afb/vol_yrkg4nheodmw94yz

=== CSV Merger Startup Script ===

PWD: /app

USER: root

Environment: production

Port: 8080

Redis URL: redis://default:asVQ...

Secret Key set: Yes

Temp Upload Dir: /app/data/temp_uploads

Export Dir: /app/data/exports

Log Dir: /app/data/logs

Creating volume directories...

Creating TEMP_UPLOAD_DIR: /app/data/temp_uploads

Creating EXPORT_DIR: /app/data/exports

Creating LOG_DIR: /app/data/logs

Testing directory permissions...

✅ /app/data/temp_uploads writable

Testing Python imports...

❌ App import failed: expected an indented block after 'except' statement on line 1073 (app.py, line 1075)

Traceback (most recent call last):

  File "<string>", line 3, in <module>

    import app

  File "/app/app.py", line 1075

    error_msg = f"REAL ERROR: {str(sync_error)} (Type: {type(sync_error).__name__})"

    ^^^^^^^^^

IndentationError: expected an indented block after 'except' statement on line 1073

Mounting volume on: /var/lib/containers/railwayapp/bind-mounts/0afe963f-018a-41c9-8f18-1bcb28388afb/vol_yrkg4nheodmw94yz

=== CSV Merger Startup Script ===

PWD: /app

USER: root

Environment: production

Port: 8080

Redis URL: redis://default:asVQ...

Secret Key set: Yes

Temp Upload Dir: /app/data/temp_uploads

Export Dir: /app/data/exports

Log Dir: /app/data/logs

Creating volume directories...

Creating TEMP_UPLOAD_DIR: /app/data/temp_uploads

Creating EXPORT_DIR: /app/data/exports

Creating LOG_DIR: /app/data/logs

Testing directory permissions...

✅ /app/data/temp_uploads writable

Testing Python imports...

❌ App import failed: expected an indented block after 'except' statement on line 1073 (app.py, line 1075)

Traceback (most recent call last):

  File "<string>", line 3, in <module>

    import app

  File "/app/app.py", line 1075

    error_msg = f"REAL ERROR: {str(sync_error)} (Type: {type(sync_error).__name__})"

    ^^^^^^^^^

IndentationError: expected an indented block after 'except' statement on line 1073